[tool.poetry]
name = "requests_tracker"
version = "0.1.0"
description = "Engineering challenge for eVisit hiring process"
authors = ["Ricardo Cisterna <r.cisternasantos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["clint", "test"]
